--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    font-family: Geist;
+    scrollbar-width: thin;
+}
+
+h1, span, logo {
+    font-family: Geist Mono;
+}
